# cf-kafka-proxy

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
config/: config.yml
