[tool.poetry]
name = "kafka-proxy"
version = "0.1.0"
description = ""
authors = ["Akshay Thakare <akshay.thakare@sap.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

